versioned_docs/version-3.0.3/install-rn.mdx
---
id: install-rn
title: Install in React Native CLI initiated project
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import { TileLink } from '../../src/components';

### Create a new project

```bash
npx react-native init AwesomeNativeBase
cd AwesomeNativeBase
```

### Install dependencies

<Tabs
defaultValue='yarn'
values={[
{ label: 'yarn', value: 'yarn' },
{ label: 'npm', value: 'npm' }
]}>

<TabItem value="yarn">

```bash
yarn add native-base react-native-svg styled-components styled-system react-native-safe-area-context
```

</TabItem>

<TabItem value="npm">

```bash
npm install native-base react-native-svg styled-components styled-system react-native-safe-area-context
```

</TabItem>

</Tabs>

### Run pod install

```bash
cd ios/
pod install
```

### Run the Hello world example

Put the below code in your App.js

```jsx
import React from 'react';
import { NativeBaseProvider, Box } from 'native-base';

function App() {
  return (
    <NativeBaseProvider>
      <Box>Hello world</Box>
    </NativeBaseProvider>
  );
}
```

<div style={{ textAlign: 'center' }}>
  <img src="/img/minion.gif" />
</div>

<div className="tailwind">
  <div className="mt-4 mb-8">
    <div className="row pl-0 ml-0">
      <TileLink
        title="Customize NativeBaseProvider"
        url="setup-provider"
        description="NativeBaseProvider provides theme throughout your application"
        className="bg-blueGray-600 mt-2"
      />
      <TileLink
        title="Theme"
        url="default-theme"
        description="Read more about the default NativeBase theme and how to override it"
        className="bg-blueGray-600  mt-2"
      />
    </div>
    <div className="row mt-2 pl-0 ml-0">
      <TileLink
        title="Utility props"
        url="utility-props"
        description="Shorthands of commonly used styling props which maps with the provided theme"
        className="bg-blueGray-600"
      />
    </div>
  </div>
</div>
