versioned_docs/version-3.2.1/install-rn.mdx
---
id: install-rn
title: Install in React Native project
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import { TileLink } from '../src/components';


<Tabs
  defaultValue='new'
  values={[
  { label: 'New Project', value: 'new' },
  { label: 'Existing Project', value: 'existing' }
  ]}>


<TabItem value="new">



### Create a new project using ReactNative CLI with NativeBase template

[Refer this link](https://github.com/react-native-community/cli#about) to get infomation about the React Native CLI.

<h4 style={{marginTop:"40px"}} className="mt-8 font-mono">Plain Javascript</h4>
<div style={{maxWidth:"750px"}}>

```bash
npx react-native init MyApp --template react-native-template-native-base
```

</div>

<h4 className="mt-8 font-mono">With Typescript</h4>
<div style={{maxWidth:"750px"}}>

```bash
npx react-native init MyApp --template react-native-template-native-base-typescript
```

</div>

Yey! you are all set, start editing App.js/App.tsx now.


</TabItem>


<TabItem value="existing">

### Create a new project if not exist

```bash
npx react-native init AwesomeNativeBase
cd AwesomeNativeBase
```

### Install dependencies

<Tabs
defaultValue='yarn'
values={[
{ label: 'yarn', value: 'yarn' },
{ label: 'npm', value: 'npm' }
]}>

<TabItem value="yarn">

```bash
yarn add native-base react-native-svg styled-components styled-system react-native-safe-area-context
```

</TabItem>

<TabItem value="npm">

```bash
npm install native-base react-native-svg styled-components styled-system react-native-safe-area-context
```

</TabItem>

</Tabs>

### Run pod install

```bash
cd ios/
pod install
```

### Run the Hello world example

Put the below code in your App.js

```jsx
import React from 'react';
import { NativeBaseProvider, Box } from 'native-base';

export default function App() {
  return (
    <NativeBaseProvider>
      <Box>Hello world</Box>
    </NativeBaseProvider>
  );
}
```

</TabItem>

</Tabs>


<div style={{ textAlign: 'center' }}>
  <img src="/img/minion.gif" />
</div>

<div className="tailwind">
  <div className="mt-4 mb-8">
    <div className="row pl-0 ml-0">
      <TileLink
        title="Customize NativeBaseProvider"
        url="setup-provider"
        description="NativeBaseProvider provides theme throughout your application"
        className="bg-blueGray-600 mt-2"
      />
      <TileLink
        title="Theme"
        url="default-theme"
        description="Read more about the default NativeBase theme and how to override it"
        className="bg-blueGray-600  mt-2"
      />
    </div>
    <div className="row mt-2 pl-0 ml-0">
      <TileLink
        title="Utility props"
        url="utility-props"
        description="Shorthands of commonly used styling props which maps with the provided theme"
        className="bg-blueGray-600"
      />
    </div>
  </div>
</div>
